@@ -1,5 +1,10 @@
 [b]Version 0.6.8[/b]:
 
+(2009-05-05)
+ * New option for smplayer.ini: row_spacing (in the [playlist] section). It
+   specifies the spacing between rows in the playlist. If the value is -1
+   the row height is not changed.
+
 (2009-05-04)
  * Added an option in Preferences -> Advanced -> Logs to make the mplayer logs
    more verbose (passes -v to mplayer).
